# cocreation-ui

./: README.md  package.json  shared_dependencies.md  tauri.conf.json  webpack.config.js
agentic_library/: fastapi_poe.py  llama_index.py  main.py
src/: app.rs  ascii_duck.rs  config.rs  constants.rs  controllers.rs  crdt.rs  error.rs  lib.rs  llm_chain.rs  main.rs  main.tauri.rs  middleware.rs  models.rs  routes.rs  services.rs  tests.rs  ui.rs  utils.rs  views.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
